main.scss
$fontstack: 'Mandali', sans-serif;
$col1: #fbfbfb;
$col2: gray;
#headerText {
    text-align: center;
    color: white;
    font-size: 50px;
    margin: 0;
    line-height: 1;
    margin-top: 7px;
}
#newLabel {
    position: absolute;
    margin-left: 200px;
    background-color: #e8effd;
    border-radius: 10px;
    padding: 2px 5px;
}
.matrixCell {

    width: 50px;
    height: 50px;
    margin-right: 10px;
    margin-bottom: 10px;
    text-align: center;
}
$borderStyle: 3px solid black;
.matGUI {
    padding-left: 10px;
    padding-top: 10px;
    border-left: $borderStyle;
    border-right: $borderStyle;
    border-radius: 20px;
}
.matContainer {
    margin-left: 20px;
    margin-top: 10px;
}
body {
    margin: 0;
    padding: 0;
    font: 100% $fontstack;
    background-color: $col1;
}
.label {
    position: relative;
}
label:hover {
    background: #f2f5ff;
    border-radius: 5px;
    padding: 2px 4px;
}
#enterMat {
    font: 100% $fontstack;
    font-size: 30px;
}
#btnNewMat:hover {
    background-color: black;
    border-radius: 10px;
}
#btnNewMat {
    width: 40px;
    margin-bottom: 20px;
    cursor: pointer;
}
.matInput {
    font-size: 20px;
    display: inline-flex;
    min-height: 150px;
}

.rowColModifier {
    height: 30px;
    position: relative;
    margin-left: 15px;
    border-radius: 5px;
    border-color: black;
    background-color: white;
    cursor: pointer;
}


.rowButton {
    -webkit-transform: rotate(-90deg);
    -moz-transform: rotate(-90deg);
    -ms-transform: rotate(-90deg);
    -o-transform: rotate(-90deg);
    filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
    position: relative;
}
.colButton {


}
#header {
    margin-top: 0;
    font: 100% $fontstack;
    background-color: #333333;
    border: 0;
    display: inline-flex;
    width: 100%;
    height: 120px;
}
.center {
    position: relative;
    margin-left: auto;
    margin-right: auto;
}
.flip {
    transform: scaleX(-1);
}
.bracket {
    margin-top: 3px;
    margin-bottom: 3px;
}
.Rbracket {
    margin-left: 10px;
}
.Lbracket {
    margin-right: 10px;
}
#cmdinput {
    background: transparent;
    border: none;
    width: 100%;
    color: white;
    resize: none;
}
#cmdinput:hover {
    border: none;
}
#cmdinput:focus {
    border: none;
    outline: none;
}
#commandLine {
    width: 100%;
    background-color: #2a689e;
    height: 50px;
    border-radius: 7px;
}
#mainBody {
    width: 50%;
    min-width: 700px;
    margin-top: 0;
    padding-top: 0;
    height: 100%;
    display: table;
    margin: auto;
    background-color: white;
    padding-left: 10px;
}
hr {
    margin-top: 0;
    padding: 0.5px;
    background-color: black;
    border-color: #737373;
    margin-bottom: 0;
}
.clickedit {
    width: 60px;
    font-size: 30px;
    border-style: none;
}

